
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int s_addr; } ;
struct sockaddr_in {int sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct pthread_args {char* host_pthread; char* port_pthread; char* slp_pthread; } ;
typedef int pthread_t ;
typedef int dest ;
struct TYPE_4__ {int sock_pointer; char* slp_pthread; } ;


 int AF_INET ;
 int SOCK_STREAM ;
 int atoi (char*) ;
 int bzero (int *,int) ;
 int close (int) ;
 int close_func ;
 int connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int pthread_create (int *,int *,void*,void*) ;
 int socket (int ,int ,int ) ;
 TYPE_2__* thread_data ;

void sockz(void *t) {

        struct sockaddr_in dest;
 struct pthread_args *my_data;
 pthread_t close_them_all;

 char *h,
      *p_tmp,
      *slp_tmp;

 int p,
     con,
     err,
     desc,
     slp;

 my_data = (struct pthread_args *) t;

 h = my_data->host_pthread;
 p_tmp = my_data->port_pthread;
 slp_tmp = my_data->slp_pthread;

 p = atoi(p_tmp);
 slp = atoi(slp_tmp);

        desc = socket(AF_INET,SOCK_STREAM,0);

 if((desc = socket(AF_INET,SOCK_STREAM,0)) < 0) {
                perror("sockz: Can`t create socket\n");
                exit(-1);
        }

        dest.sin_family = AF_INET;
        dest.sin_port = htons(p);
        dest.sin_addr.s_addr = inet_addr(h);
        bzero(&(dest.sin_zero),8);

        con = connect(desc,(struct sockaddr *)&dest,sizeof(dest));

 if(con < 0) {
                printf("\nsockz: Can`t connect to %s:%d\n",h,p);
                close(desc);
                exit(-1);
        }

 thread_data[0].sock_pointer = desc;
 thread_data[0].slp_pthread = slp_tmp;

 if((err = pthread_create(&close_them_all,((void*)0),(void*)&close_func, (void*)&thread_data[0]) == -1)) {

  printf("sockz: Can`t create thread\n");
  exit(-1);
 }

}
